fixed animation flicker

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body, html, #root{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .wrapper{
     width: 100%;
     padding: 2em;
