--- a/src/components/backdrop.css
+++ b/src/components/backdrop.css
@@ -10,28 +10,27 @@
 
 .backdrop-wrapper{
     position: absolute;
-    width: 100vw;
-    height: 75%;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
-.reveal-text{
+/* .reveal-text{
     animation: reveal 15s infinite;
-}
+} */
 
 @keyframes reveal {
     0% { 
         opacity: 0;
-        transform: translate(-100px, 0px);
+        /* transform: translate(-100px, 0px); */
     }
-    10%{
-        opacity: 0;
-        transform: translate(-100px, 0px);
-    }
-    15%{
+    /* 10%{
+        opacity: 0; */
+        /* transform: translate(-100px, 0px); */
+    /* } */
+    /* 15%{
         opacity: 1;
         transform: translate(0px, 0px);
-    }
+    } */
     100%{
         opacity: 1;
         transform: translate(0px, 0px);
@@ -39,33 +38,35 @@
 }
 
 .fade-in-image { 
-    animation: fadeIn 15s infinite; 
+    animation: fadeIn 5s forwards, zoomOut 15s forwards;
+    opacity: 0;
 }
 
 @keyframes fadeIn {
     0% { 
         opacity: 0;
-        transform: scale(1.15, 1.15);
-    }
-    15%{
-        opacity: 1;
     }
     100%{
         opacity: 1;
+    }
+}
+
+@keyframes zoomOut{
+    0% { 
+        transform: scale(1.15, 1.15);
+    }
+    100%{
         transform: scale(1, 1);
     }
 }
 
 .fade-out-image { 
-    animation: fadeOut 15s infinite; 
+    animation: fadeOut 5s forwards; 
 }
 
 @keyframes fadeOut {
     0% { 
         opacity: 1;
-    }
-    15% { 
-        opacity: 0;
     }
     100% { 
         opacity: 0;
@@ -78,14 +79,6 @@ img{
     object-fit: cover;
 }
 
-.current-backdrop-img{
-    z-index: 5;
-}
-
-.old-backdrop-img{
-    z-index: 6;
-}
-
 h2{
     z-index: 8;
     padding: .5em;
@@ -93,9 +86,9 @@ h2{
 
 .overlay{
     position: absolute;
-    height: 75%;
+    height: 100%;
     width: 100%;
     background: rgb(2,0,36);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 21%, rgba(2,0,36,0) 66%, rgba(2,0,36,1) 100%);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 20%, rgba(2,0,36,0) 45%, rgba(2,0,36,0) 72%, rgba(2,0,36,1) 100%);
     z-index: 6;
 }
